@@ -1,13 +1,9 @@
 package de.geheb.imdbfinder.imdb;
 
-import com.eclipsesource.json.Json;
-import com.eclipsesource.json.JsonArray;
-import com.eclipsesource.json.JsonValue;
 import de.geheb.imdbfinder.http.HttpRequestExecutor;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.regex.Pattern;
@@ -19,7 +15,7 @@ import org.jetbrains.annotations.Nullable;
 @SuppressWarnings("SpellCheckingInspection")
 public class UrlFinder {
 
-  private static final String searchEngineTemplate = "https://api.qwant.com/api/search/web?count=10&offset=0&q={query}&t=web&uiv=1";
+  private static final String searchEngineTemplate = "https://lite.duckduckgo.com/lite/?q=";
   private final Pattern urlPattern;
   private final HttpRequestExecutor httpRequestExecutor;
 
@@ -31,33 +27,19 @@ public class UrlFinder {
   }
 
   @Nullable
-  public URL find(@NotNull final String title) throws IOException {
+  public URI find(@NotNull final String title) throws IOException {
 
-    var searchTerms = URLEncoder.encode(title + " imdb", StandardCharsets.UTF_8);
-    var searchEngineUrl = searchEngineTemplate.replace("{query}",searchTerms);
+    final var searchTerms = URLEncoder.encode(title + " imdb", StandardCharsets.UTF_8);
+    final var searchEngineUrl = searchEngineTemplate + searchTerms;
 
-    final URL url;
-    try {
-      url = new URL(searchEngineUrl);
+    final var uri = URI.create(searchEngineUrl);
+    final var searchResult = httpRequestExecutor.post(uri);
 
-    } catch (MalformedURLException e) {
-      return null;
+    final var imdbUrlMatcher = urlPattern.matcher(searchResult);
+    if (imdbUrlMatcher.find()) {
+      return URI.create(imdbUrlMatcher.group());
     }
-    final var searchResult = httpRequestExecutor.getAsString(url);
 
-    final var jsonObj = Json.parse(searchResult).asObject();
-    final var jsonArray = jsonObj
-            .get("data").asObject()
-            .get("result").asObject()
-            .get("items").asArray();
-
-    for (JsonValue value : jsonArray) {
-      final var jsonUrl = value.asObject().get("url").toString();
-      final var imdbUrlMatcher = urlPattern.matcher(jsonUrl);
-      if (imdbUrlMatcher.find()) {
-        return new URL(imdbUrlMatcher.group());
-      }
-    }
     return null;
   }
 }
